--- a/about.html
+++ b/about.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
   <body>
+    <header>
     <h1>Simon<sup>&reg;</sup></h1>
     <nav>
-      <ol>
-        <li><a href = "home.html">Home</a>></a></li>
-        <li><a href = "play.html">Play</a>></a></li>
+      <ul>
+        <li><a href = "index.html">Home</a></a></li>
+        <li><a href = "play.html">Play</a></a></li>
         <li><a href = "scores.html">Scores</a></li>
         <li><a href = "about.html">About</a></li>
-      </ol>
+      </ul>
     </nav>
+    <hr />
+    </header>
+
+    <main>
+      <p>
+        Simon is a repetitive memory game where you follow the demonstrated color sequence until you make a mistake. The longer the sequence you repeat, the greater your score.
+      </p>
+      <p>
+        The name Simon is a registered trademark owned by Milton-Bradley. Our use of the name and the game is for non-profit educational use only. No part of this code or program should be used outside of that definition.
+      </p>
+      <hr />
+    </main>
+
+    <footer>
+      <span class = "text-reset">Author Name(s)</span>
+      <a href="https://github.com/webprogramming260/simon-html">GitHub</a>
+    </footer>
+
   </body>
 </html>
