--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
   <body>
+    <header>
     <h1>Simon<sup>&reg;</sup></h1>
     <nav>
-      <ol>
-        <li><a href = "home.html">Home</a>></a></li>
-        <li><a href = "play.html">Play</a>></a></li>
+      <ul>
+        <li><a href = "index.html">Home</a></a></li>
+        <li><a href = "play.html">Play</a></a></li>
         <li><a href = "scores.html">Scores</a></li>
         <li><a href = "about.html">About</a></li>
-      </ol>
+      </ul>
     </nav>
+    <hr />
+    </header>
+
+    <main>
+      <h1>Welcome</h1>
+      <p>Login to play</p>
+      <form method="get" action="play.html">
+        <label for="name">Name</label>
+        <input type="text" id="name" placeholder="Your name here" />
+        <button type = "submit">Login</button>
+      </form>
+      <hr />
+    </main>
+
+    <footer>
+      <span class = "text-reset">Author Name(s)</span>
+      <a href="https://github.com/webprogramming260/simon-html">GitHub</a>
+    </footer>
+
   </body>
 </html>
