updating github to include new features, including square buttons in the play tab

--- a/play.html
+++ b/play.html
@@ -37,8 +37,69 @@
 
     <br />
 
+      <div>
+        <table>
+          <tr>
+            <td>
+              <button>
+                <svg
+                  aria-hidden="true"
+                  viewBox="0 0 100 100"
+                  height="100"
+                  width="100"
+                  >
+
+                  <path d="M 95,5 95,95 5,95 Q 5,5 95,5" fill="green" />
+                </svg>
+              </button>
+            </td>
+            <td>
+              <button>
+                <svg
+                aria-hidden="true"
+                viewBox="0 0 100 100"
+                height="100"
+                width="100"
+                >
+              <path d="M 5,5 5,95 95,95 Q 95,5 5,5" fill="red" />
+              </svg>
+              </button>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <button>
+                <svg
+                aria-hidden="true"
+                viewBox="0 0 100 100"
+                height="100"
+                width="100"
+                >
+              <path d="M 5,5 95,5 95,95 Q 5,95 5,5" fill="blue" />
+              </svg>
+              </button>
+            </td>
+            <td>
+              <button>
+                <svg
+                aria-hidden="true"
+                viewBox="0 0 100 100"
+                height="100"
+                width="100"
+                >
+              <path d="M 95,5 5,5 5,95 Q 95,95 95,5" fill="yellow" />
+              </svg>
+              </button>
+            </td>
+          </tr>
+        </table>
+      </div>
+
+
+      <hr />
     <footer>
       <span class = "text-reset">Author Name(s)</span>
+      <br />
       <a href="https://github.com/webprogramming260/simon-html">GitHub</a>
     </footer>
 
