updating github to include new features, including the scores page

--- a/scores.html
+++ b/scores.html
@@ -4,18 +4,48 @@
     <header>
     <h1>Simon<sup>&reg;</sup></h1>
     <nav>
-      <ul>
+      <menu>
         <li><a href = "index.html">Home</a></a></li>
         <li><a href = "play.html">Play</a></a></li>
         <li><a href = "scores.html">Scores</a></li>
         <li><a href = "about.html">About</a></li>
-      </ul>
+      </menu>
     </nav>
     <hr />
     </header>
 
     <main>
-      
+        <table>
+          <thead>
+          <tr>
+            <th>#</th>
+            <th>Name</th>
+            <th>Score</th>
+            <th>Date</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>도윤 이</td>
+            <td>34</td>
+            <td>May 20, 2021</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Annie James</td>
+            <td>29</td>
+            <td>June 2, 2021</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>Gunter Spears</td>
+            <td>7</td>
+            <td>July 3, 2020</td>
+          </tr>
+        </tbody>
+        </table>
+      <hr />
     </main>
 
     <footer>
