--- a/about.html
+++ b/about.html
@@ -4,12 +4,12 @@
     <header>
     <h1>Simon<sup>&reg;</sup></h1>
     <nav>
-      <ul>
+      <menu>
         <li><a href = "index.html">Home</a></a></li>
         <li><a href = "play.html">Play</a></a></li>
         <li><a href = "scores.html">Scores</a></li>
         <li><a href = "about.html">About</a></li>
-      </ul>
+      </menu>
     </nav>
     <hr />
     </header>
