updating github to include new features, some information in the head of the file

--- a/scores.html
+++ b/scores.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>Scores</title>
+    <link rel="icon" href="favicon.ico" />
+  </head>
   <body>
     <header>
     <h1>Simon<sup>&reg;</sup></h1>
