--- a/play.html
+++ b/play.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>Play</title>
+    <link rel="icon" href="favicon.ico" />
+  </head>
   <body>
     <header>
     <h1>Simon<sup>&reg;</sup></h1>
