updating github to include new features, some information in the head of the file

--- a/scores.html
+++ b/scores.html
@@ -55,7 +55,7 @@
     <footer>
       <span class = "text-reset">Author Name(s)</span>
       <br />
-      <a href="https://github.com/webprogramming260/simon-html">GitHub</a>
+      <a href="https://github.com/rebekahross/simon">GitHub</a>
     </footer>
 
   </body>
