--- a/play.html
+++ b/play.html
@@ -104,7 +104,7 @@
     <footer>
       <span class = "text-reset">Author Name(s)</span>
       <br />
-      <a href="https://github.com/webprogramming260/simon-html">GitHub</a>
+      <a href="https://github.com/rebekahross/simon">GitHub</a>
     </footer>
 
   </body>
