updating github to include new features, including small changes to the overall layout

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-    <h1>Simon<sup>&reg;</sup></h1>
+    <h1>Rebekah's Simon<sup>&reg;</sup></h1>
     <nav>
       <menu>
         <li><a href = "index.html">Home</a></a></li>
@@ -16,6 +16,7 @@
       </menu>
     </nav>
     <hr />
+    <br />
     </header>
 
     <main>
@@ -25,6 +26,7 @@
       <p>
         The name Simon is a registered trademark owned by Milton-Bradley. Our use of the name and the game is for non-profit educational use only. No part of this code or program should be used outside of that definition.
       </p>
+      <br />
       <hr />
     </main>
 
@@ -33,6 +35,5 @@
       <br />
       <a href="https://github.com/rebekahross/simon">GitHub</a>
     </footer>
-
   </body>
 </html>
