--- a/play.html
+++ b/play.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-    <h1>Simon<sup>&reg;</sup></h1>
+    <h1>Rebekah's Simon<sup>&reg;</sup></h1>
     <nav>
       <menu>
         <li><a href = "index.html">Home</a></a></li>
@@ -16,6 +16,7 @@
       </menu>
     </nav>
     <hr />
+    <br />
     </header>
 
     <main>
@@ -36,6 +37,7 @@
       <div>
         <button>Reset</button>
       </div>
+      <br />
       <hr />
     </main>
 
@@ -79,7 +81,7 @@
                 height="100"
                 width="100"
                 >
-              <path d="M 5,5 95,5 95,95 Q 5,95 5,5" fill="blue" />
+              <path d="M 5,5 95,5 95,95 Q 5,95 5,5" fill="yellow" />
               </svg>
               </button>
             </td>
@@ -91,7 +93,7 @@
                 height="100"
                 width="100"
                 >
-              <path d="M 95,5 5,5 5,95 Q 95,95 95,5" fill="yellow" />
+              <path d="M 95,5 5,5 5,95 Q 95,95 95,5" fill="blue" />
               </svg>
               </button>
             </td>
@@ -99,7 +101,7 @@
         </table>
       </div>
 
-
+      <br />
       <hr />
     <footer>
       <span class = "text-reset">Author Name(s)</span>
