--- a/scores.html
+++ b/scores.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-    <h1>Simon<sup>&reg;</sup></h1>
+    <h1>Rebekah's Simon<sup>&reg;</sup></h1>
     <nav>
       <menu>
         <li><a href = "index.html">Home</a></a></li>
@@ -16,6 +16,7 @@
       </menu>
     </nav>
     <hr />
+    <br />
     </header>
 
     <main>
@@ -31,24 +32,25 @@
         <tbody>
           <tr>
             <td>1</td>
-            <td>도윤 이</td>
-            <td>34</td>
-            <td>May 20, 2021</td>
+            <td>Rebekah Ross</td>
+            <td>76</td>
+            <td>February 8, 2023</td>
           </tr>
           <tr>
             <td>2</td>
-            <td>Annie James</td>
-            <td>29</td>
-            <td>June 2, 2021</td>
+            <td>Zach Erikson</td>
+            <td>68</td>
+            <td>January 5, 2023</td>
           </tr>
           <tr>
             <td>3</td>
-            <td>Gunter Spears</td>
-            <td>7</td>
-            <td>July 3, 2020</td>
+            <td>Maren Garnett</td>
+            <td>40</td>
+            <td>February 1, 2023</td>
           </tr>
         </tbody>
         </table>
+        <br/>
       <hr />
     </main>
 
