--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
     
-      <h1>Simon<sup>&reg;</sup></h1>
+      <h1>Rebekah's Simon<sup>&reg;</sup></h1>
     
     <nav>
       <menu>
@@ -23,13 +23,14 @@
   </header>
 
     <main>
-      <h1>Welcome</h1>
-      <p>Login to play</p>
+      <h1>Welcome!</h1>
+      <p>Login to play:</p>
       <form method="get" action="play.html">
         <label for="name">Name</label>
-        <input type="text" id="name" placeholder="Your name here" />
+        <input type="text" id="name" placeholder="Your name" />
         <button type = "submit">Login</button>
       </form>
+      <br />
       <hr />
     </main>
 
