--- a/play.html
+++ b/play.html
@@ -3,110 +3,56 @@
   <head>
     <title>Play</title>
     <link rel="icon" href="favicon.ico" />
+    <link rel="stylesheet" href="main.css" />
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
   </head>
-  <body>
-    <header>
-    <h1>Rebekah's Simon<sup>&reg;</sup></h1>
-    <nav>
-      <menu>
-        <li><a href = "index.html">Home</a></a></li>
-        <li><a href = "play.html">Play</a></a></li>
-        <li><a href = "scores.html">Scores</a></li>
-        <li><a href = "about.html">About</a></li>
+  <body class="bg-dark text-light">
+    <header class="container-fluid">
+      <nav class="navbar fixed-top navbar-dark">
+        <a class="navbar-brand" href="#">Rebekah's Simon<sup>&reg;</sup></a>
+      <menu class="navbar-nav">
+        <li class="nav-item"><a class="nav-link active" href = "index.html">Home</a></a></li>
+        <li class="nav-item"><a class="nav-link active" href = "play.html">Play</a></a></li>
+        <li class="nav-item"><a class="nav-link active" href = "scores.html">Scores</a></li>
+        <li class="nav-item"><a class="nav-link active" href = "about.html">About</a></li>
       </menu>
     </nav>
-    <hr />
-    <br />
+    </header>
     </header>
 
-    <main>
+    <main class="bg-secondary">
       <div class="players">
         Player:
         <span class="player-name">Mystery player</span>
       </div>
-      
-      <br />
-
-      <div>
-        <label for="count">Score</label>
-        <input type="text" id="count" value="--" readonly />
+      <div class="game">
+        <div class="button-container">
+        <button class="button-top-left"></button>
+        <button class="button-top-right"></button>
+        <button class="button-bottom-left"></button>
+        <button class="button-bottom-right"></button>
+        <div class="controls center">
+        <div class="game-name">Simon<sup>&reg;</sup></div>
+        <div class="score center">--</div>
+        <button class="btn btn-primary">Reset</button>
       </div>
-
-      <br />
-
-      <div>
-        <button>Reset</button>
       </div>
-      <br />
-      <hr />
+      </div>
     </main>
 
-    <br />
 
-      <div>
-        <table>
-          <tr>
-            <td>
-              <button>
-                <svg
-                  aria-hidden="true"
-                  viewBox="0 0 100 100"
-                  height="100"
-                  width="100"
-                  >
-
-                  <path d="M 95,5 95,95 5,95 Q 5,5 95,5" fill="green" />
-                </svg>
-              </button>
-            </td>
-            <td>
-              <button>
-                <svg
-                aria-hidden="true"
-                viewBox="0 0 100 100"
-                height="100"
-                width="100"
-                >
-              <path d="M 5,5 5,95 95,95 Q 95,5 5,5" fill="red" />
-              </svg>
-              </button>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <button>
-                <svg
-                aria-hidden="true"
-                viewBox="0 0 100 100"
-                height="100"
-                width="100"
-                >
-              <path d="M 5,5 95,5 95,95 Q 5,95 5,5" fill="yellow" />
-              </svg>
-              </button>
-            </td>
-            <td>
-              <button>
-                <svg
-                aria-hidden="true"
-                viewBox="0 0 100 100"
-                height="100"
-                width="100"
-                >
-              <path d="M 95,5 5,5 5,95 Q 95,95 95,5" fill="blue" />
-              </svg>
-              </button>
-            </td>
-          </tr>
-        </table>
-      </div>
-
-      <br />
-      <hr />
-    <footer>
+    <footer class="bg-dark text-dark text-muted">
+      <div class="container-fluid">
       <span class = "text-reset">Author Name(s)</span>
       <br />
-      <a href="https://github.com/rebekahross/simon">GitHub</a>
+      <a href="https://github.com/rebekahross/simon">Source</a>
+    </div>
     </footer>
 
   </body>
