--- a/scores.html
+++ b/scores.html
@@ -3,20 +3,26 @@
   <head>
     <title>Scores</title>
     <link rel="icon" href="favicon.ico" />
+    <link rel="stylesheet" href="main.css" />
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
   </head>
-  <body>
-    <header>
-    <h1>Rebekah's Simon<sup>&reg;</sup></h1>
-    <nav>
-      <menu>
-        <li><a href = "index.html">Home</a></a></li>
-        <li><a href = "play.html">Play</a></a></li>
-        <li><a href = "scores.html">Scores</a></li>
-        <li><a href = "about.html">About</a></li>
+  <body class="bg-dark text-light">
+    <header class="container-fluid">
+      <nav class="navbar fixed-top navbar-dark">
+        <a class="navbar-brand" href="#">Rebekah's Simon<sup>&reg;</sup></a>
+      <menu class="navbar-nav">
+        <li class="nav-item"><a class="nav-link active" href = "index.html">Home</a></a></li>
+        <li class="nav-item"><a class="nav-link active" href = "play.html">Play</a></a></li>
+        <li class="nav-item"><a class="nav-link active" href = "scores.html">Scores</a></li>
+        <li class="nav-item"><a class="nav-link active" href = "about.html">About</a></li>
       </menu>
     </nav>
-    <hr />
-    <br />
     </header>
 
     <main>
