--- a/about.html
+++ b/about.html
@@ -16,30 +16,45 @@
     <header class="container-fluid">
       <nav class="navbar fixed-top navbar-dark">
         <a class="navbar-brand" href="#">Rebekah's Simon<sup>&reg;</sup></a>
-      <menu class="navbar-nav">
-        <li class="nav-item"><a class="nav-link active" href = "index.html">Home</a></a></li>
-        <li class="nav-item"><a class="nav-link active" href = "play.html">Play</a></a></li>
-        <li class="nav-item"><a class="nav-link active" href = "scores.html">Scores</a></li>
-        <li class="nav-item"><a class="nav-link active" href = "about.html">About</a></li>
-      </menu>
-    </nav>
+        <menu class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="play.html">Play</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="scores.html">Scores</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="about.html">About</a>
+          </li>
+        </menu>
+      </nav>
     </header>
 
-    <main>
-      <p>
-        Simon is a repetitive memory game where you follow the demonstrated color sequence until you make a mistake. The longer the sequence you repeat, the greater your score.
-      </p>
-      <p>
-        The name Simon is a registered trademark owned by Milton-Bradley. Our use of the name and the game is for non-profit educational use only. No part of this code or program should be used outside of that definition.
-      </p>
-      <br />
-      <hr />
+    <main class="container-fluid bg-secondary text-center">
+      <div>
+        <p>
+          Simon is a repetitive memory game where you follow the demonstrated
+          color sequence until you make a mistake. The longer the sequence you
+          repeat, the greater your score.
+        </p>
+        <p>
+          The name Simon is a registered trademark owned by Milton-Bradley. Our
+          use of the name and the game is for non-profit educational use only.
+          No part of this code or program should be used outside of that
+          definition.
+        </p>
+      </div>
     </main>
 
-    <footer>
-      <span class = "text-reset">Author Name(s)</span>
-      <br />
-      <a href="https://github.com/rebekahross/simon">GitHub</a>
+    <footer class="bg-dark text-dark text-muted">
+      <div class="container-fluid">
+        <span class="text-reset">Author Name(s)</span>
+        <br />
+        <a href="https://github.com/rebekahross/simon">GitHub</a>
+      </div>
     </footer>
   </body>
 </html>
