--- a/play.html
+++ b/play.html
@@ -24,7 +24,6 @@
       </menu>
     </nav>
     </header>
-    </header>
 
     <main class="bg-secondary">
       <div class="players">
@@ -33,16 +32,16 @@
       </div>
       <div class="game">
         <div class="button-container">
-        <button class="button-top-left"></button>
-        <button class="button-top-right"></button>
-        <button class="button-bottom-left"></button>
-        <button class="button-bottom-right"></button>
-        <div class="controls center">
-        <div class="game-name">Simon<sup>&reg;</sup></div>
-        <div class="score center">--</div>
-        <button class="btn btn-primary">Reset</button>
-      </div>
-      </div>
+          <button class="button-top-left"></button>
+          <button class="button-top-right"></button>
+          <button class="button-bottom-left"></button>
+          <button class="button-bottom-right"></button>
+          <div class="controls center">
+            <div class="game-name">Simon<sup>&reg;</sup></div>
+            <div class="score center">--</div>
+            <button class="btn btn-primary">Reset</button>
+          </div>
+        </div>
       </div>
     </main>
 
@@ -50,8 +49,7 @@
     <footer class="bg-dark text-dark text-muted">
       <div class="container-fluid">
       <span class = "text-reset">Author Name(s)</span>
-      <br />
-      <a href="https://github.com/rebekahross/simon">Source</a>
+      <a class="text-reset" href="https://github.com/rebekahross/simon">Source</a>
     </div>
     </footer>
 
