--- a/scores.html
+++ b/scores.html
@@ -16,18 +16,26 @@
     <header class="container-fluid">
       <nav class="navbar fixed-top navbar-dark">
         <a class="navbar-brand" href="#">Rebekah's Simon<sup>&reg;</sup></a>
-      <menu class="navbar-nav">
-        <li class="nav-item"><a class="nav-link active" href = "index.html">Home</a></a></li>
-        <li class="nav-item"><a class="nav-link active" href = "play.html">Play</a></a></li>
-        <li class="nav-item"><a class="nav-link active" href = "scores.html">Scores</a></li>
-        <li class="nav-item"><a class="nav-link active" href = "about.html">About</a></li>
-      </menu>
-    </nav>
+        <menu class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="play.html">Play</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="scores.html">Scores</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+        </menu>
+      </nav>
     </header>
 
-    <main>
-        <table>
-          <thead>
+    <main class="container-fluid bg-secondary text-center">
+      <table class="table table-warning table-striped-columns">
+        <thead class="table-dark">
           <tr>
             <th>#</th>
             <th>Name</th>
@@ -55,16 +63,17 @@
             <td>February 1, 2023</td>
           </tr>
         </tbody>
-        </table>
-        <br/>
+      </table>
+      <br />
       <hr />
     </main>
 
-    <footer>
-      <span class = "text-reset">Author Name(s)</span>
-      <br />
-      <a href="https://github.com/rebekahross/simon">GitHub</a>
+    <footer class="bg-dark text-dark text-muted">
+      <div class="container-fluid">
+        <span class="text-reset">Author Name(s)</span>
+        <br />
+        <a href="https://github.com/rebekahross/simon">Sources</a>
+      </div>
     </footer>
-
   </body>
 </html>
