--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="bg-dark text-light">
+  <body>
     <header class="container-fluid">
       <nav class="navbar fixed-top navbar-dark">
         <a class="navbar-brand" href="#">Rebekah's Simon<sup>&reg;</sup></a>
@@ -33,7 +33,7 @@
       </nav>
     </header>
 
-    <main class="container-fluid bg-secondary text-center">
+    <main class="container-fluid text-center">
       <div>
         <p>
           Simon is a repetitive memory game where you follow the demonstrated
@@ -49,11 +49,10 @@
       </div>
     </main>
 
-    <footer class="bg-dark text-dark text-muted">
+    <footer class="text-dark text-muted">
       <div class="container-fluid">
         <span class="text-reset">Author Name(s)</span>
-        <br />
-        <a href="https://github.com/rebekahross/simon">GitHub</a>
+        <a href="https://github.com/rebekahross/simon">Sources</a>
       </div>
     </footer>
   </body>
