--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
   </head>
 
-  <body class="bg-dark text-light">
+  <body>
     <header class="container-fluid">
       <nav class="navbar fixed-top navbar-dark">
         <a class="navbar-brand" href="#">Rebekah's Simon<sup>&reg;</sup></a>
@@ -34,7 +34,7 @@
       </nav>
     </header>
 
-    <main class="container-fluid bg-secondary text-center">
+    <main class="container-fluid text-center">
       <div>
         <h1>Welcome!</h1>
         <p>Login to play:</p>
@@ -45,11 +45,10 @@
       </div>
     </main>
 
-    <footer class="bg-dark text-dark text-muted">
+    <footer class="text-dark text-muted">
       <div class="container-fluid">
         <span class="text-reset">Author Name(s)</span>
-        <br />
-        <a href="https://github.com/rebekahross/simon">GitHub</a>
+        <a href="https://github.com/rebekahross/simon">Sources</a>
       </div>
     </footer>
   </body>
