--- a/play.html
+++ b/play.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="bg-dark text-light">
+  <body>
     <header class="container-fluid">
       <nav class="navbar fixed-top navbar-dark">
         <a class="navbar-brand" href="#">Rebekah's Simon<sup>&reg;</sup></a>
@@ -25,7 +25,7 @@
     </nav>
     </header>
 
-    <main class="bg-secondary">
+    <main>
       <div class="players">
         Player:
         <span class="player-name">Mystery player</span>
@@ -46,10 +46,10 @@
     </main>
 
 
-    <footer class="bg-dark text-dark text-muted">
+    <footer class="text-dark text-muted">
       <div class="container-fluid">
       <span class = "text-reset">Author Name(s)</span>
-      <a class="text-reset" href="https://github.com/rebekahross/simon">Source</a>
+      <a href="https://github.com/rebekahross/simon">Sources</a>
     </div>
     </footer>
 
