--- a/scores.html
+++ b/scores.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="bg-dark text-light">
+  <body>
     <header class="container-fluid">
       <nav class="navbar fixed-top navbar-dark">
         <a class="navbar-brand" href="#">Rebekah's Simon<sup>&reg;</sup></a>
@@ -33,7 +33,7 @@
       </nav>
     </header>
 
-    <main class="container-fluid bg-secondary text-center">
+    <main class="container-fluid text-center">
       <table class="table table-warning table-striped-columns">
         <thead class="table-dark">
           <tr>
@@ -68,10 +68,9 @@
       <hr />
     </main>
 
-    <footer class="bg-dark text-dark text-muted">
+    <footer class="text-dark text-muted">
       <div class="container-fluid">
         <span class="text-reset">Author Name(s)</span>
-        <br />
         <a href="https://github.com/rebekahross/simon">Sources</a>
       </div>
     </footer>
