updating github with finishing touches for the simon css

--- a/about.html
+++ b/about.html
@@ -46,13 +46,19 @@
           No part of this code or program should be used outside of that
           definition.
         </p>
+        <p>
+          Rebekah Ross developed this code in conjunction with BYU's Computer
+          Science 260 class.
+        </p>
       </div>
     </main>
 
     <footer class="text-dark text-muted">
       <div class="container-fluid">
         <span class="text-reset">Author Name(s)</span>
-        <a href="https://github.com/rebekahross/simon">Sources</a>
+        <a class="text-reset" href="https://github.com/rebekahross/simon"
+          >Sources</a
+        >
       </div>
     </footer>
   </body>
