--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
     <footer class="text-dark text-muted">
       <div class="container-fluid">
         <span class="text-reset">Author Name(s)</span>
-        <a href="https://github.com/rebekahross/simon">Sources</a>
+        <a class="text-reset" href="https://github.com/rebekahross/simon"
+          >Sources</a
+        >
       </div>
     </footer>
   </body>
