Added play.js which makes the game operable

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Home</title>
     <link rel="icon" href="favicon.ico" />
+    <script src="login.js"></script>
     <link rel="stylesheet" href="main.css" />
 
     <link
@@ -40,7 +41,7 @@
         <p>Login to play:</p>
         <form method="get" action="play.html">
           <input type="text" id="name" placeholder="Your name here" />
-          <button type="submit" class="btn btn-primary">Login</button>
+          <button class="btn btn-primary" onclick="login()">Login</button>
         </form>
       </div>
     </main>
