--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
       <div>
         <h1>Welcome!</h1>
         <p>Login to play:</p>
-        <form method="get" action="play.html">
+        <div>
           <input type="text" id="name" placeholder="Your name here" />
           <button class="btn btn-primary" onclick="login()">Login</button>
-        </form>
+        </div>
       </div>
     </main>
 
