--- a/scores.html
+++ b/scores.html
@@ -43,26 +43,7 @@
             <th>Date</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td>Rebekah Ross</td>
-            <td>76</td>
-            <td>February 8, 2023</td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>Zach Erikson</td>
-            <td>68</td>
-            <td>January 5, 2023</td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>Maren Garnett</td>
-            <td>40</td>
-            <td>February 1, 2023</td>
-          </tr>
-        </tbody>
+        <tbody id="scores"></tbody>
       </table>
       <br />
       <hr />
