--- a/about.html
+++ b/about.html
@@ -18,13 +18,13 @@
         <a class="navbar-brand" href="#">Rebekah's Simon<sup>&reg;</sup></a>
         <menu class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" href="index.html">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="play.html">Play</a>
+            <a class="nav-link" href="play.html">Play</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="scores.html">Scores</a>
+            <a class="nav-link" href="scores.html">Scores</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" href="about.html">About</a>
