--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
     <link rel="icon" href="favicon.ico" />
+
     <script src="login.js"></script>
     <link rel="stylesheet" href="main.css" />
 
@@ -14,7 +17,7 @@
     />
   </head>
 
-  <body>
+  <body class="bg-dark">
     <header class="container-fluid">
       <nav class="navbar fixed-top navbar-dark">
         <a class="navbar-brand" href="#">Rebekah's Simon<sup>&reg;</sup></a>
