--- a/play.html
+++ b/play.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Play</title>
     <link rel="icon" href="favicon.ico" />
+
     <link rel="stylesheet" href="main.css" />
 
     <link
@@ -12,46 +15,74 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body class="bg-dark text-light">
     <header class="container-fluid">
       <nav class="navbar fixed-top navbar-dark">
         <a class="navbar-brand" href="#">Rebekah's Simon<sup>&reg;</sup></a>
-      <menu class="navbar-nav">
-        <li class="nav-item"><a class="nav-link active" href = "index.html">Home</a></a></li>
-        <li class="nav-item"><a class="nav-link active" href = "play.html">Play</a></a></li>
-        <li class="nav-item"><a class="nav-link active" href = "scores.html">Scores</a></li>
-        <li class="nav-item"><a class="nav-link active" href = "about.html">About</a></li>
-      </menu>
-    </nav>
+        <menu class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="play.html">Play</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="scores.html">Scores</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+        </menu>
+      </nav>
     </header>
 
-    <main>
+    <main class="bg-secondary">
       <div class="players">
         Player:
-        <span class="player-name">Mystery player</span>
+        <span class="player-name"></span>
       </div>
       <div class="game">
         <div class="button-container">
-          <button id="green" class="game-button button-top-left" onclick="game.pressButton(this)"></button> 
-          <button id="red" class="game-button button-top-right" onclick="game.pressButton(this)"></button> 
-          <button id="yellow" class="game-button button-bottom-left" onclick="game.pressButton(this)"></button> 
-          <button id="blue" class="game-button button-bottom-right" onclick="game.pressButton(this)"></button> 
+          <button
+            id="green"
+            class="game-button button-top-left"
+            onclick="game.pressButton(this)"
+          ></button>
+          <button
+            id="red"
+            class="game-button button-top-right"
+            onclick="game.pressButton(this)"
+          ></button>
+          <button
+            id="yellow"
+            class="game-button button-bottom-left"
+            onclick="game.pressButton(this)"
+          ></button>
+          <button
+            id="blue"
+            class="game-button button-bottom-right"
+            onclick="game.pressButton(this)"
+          ></button>
           <div class="controls center">
             <div class="game-name">Simon<sup>&reg;</sup></div>
             <div id="score" class="score center">--</div>
-            <button class="btn btn-primary" onclick="game.reset()">Reset</button>
+            <button class="btn btn-primary" onclick="game.reset()">
+              Reset
+            </button>
           </div>
         </div>
       </div>
     </main>
 
-
     <footer class="text-dark text-muted">
       <div class="container-fluid">
-      <span class = "text-reset">Author Name(s)</span>
-      <a class="text-reset" href="https://github.com/rebekahross/simon">Sources</a>
-    </div>
+        <span class="text-reset">Author Name(s)</span>
+        <a class="text-reset" href="https://github.com/rebekahross/simon"
+          >Sources</a
+        >
+      </div>
     </footer>
 
+    <script src="play.js"></script>
   </body>
 </html>
