--- a/scores.html
+++ b/scores.html
@@ -33,7 +33,7 @@
       </nav>
     </header>
 
-    <main class="container-fluid text-center">
+    <main class="bg-secondary container-fluid">
       <table class="table table-warning table-striped-columns">
         <thead class="table-dark">
           <tr>
